[package]
name = "knaptime-fuzz"
version = "0.0.0"
publish = false
edition = "2021"

[package.metadata]
cargo-fuzz = true

[dependencies]
arbitrary = { version = "1.3.0", features = ["derive"] }
libfuzzer-sys = "0.4"

[dependencies.knaptime]
path = ".."

# Prevent this from interfering with workspaces
[workspace]
members = ["."]

[profile.release]
debug = 1

[[bin]]
name = "recursive-dp"
path = "fuzz_targets/knapsack/recursive-dp.rs"
test = false
doc = false

[[bin]]
name = "dp-dpwalkback"
path = "fuzz_targets/knapsack/dp-dpwalkback.rs"
test = false
doc = false

[[bin]]
name = "dp-dpsliding"
path = "fuzz_targets/knapsack/dp-dpsliding.rs"
test = false
doc = false

[[bin]]
name = "recursive"
path = "fuzz_targets/knapsack/recursive.rs"
test = false
doc = false

[[bin]]
name = "dp"
path = "fuzz_targets/knapsack/dp.rs"
test = false
doc = false

[[bin]]
name = "subsetsumreversed"
path = "fuzz_targets/helpers/subsetsumreversed.rs"
test = false
doc = false

[[bin]]
name = "threshold-recursive-dp"
path = "fuzz_targets/threshold/recursive-dp.rs"
test = false
doc = false

[[bin]]
name = "zeroone-recursive-dp"
path = "fuzz_targets/zeroone/recursive-dp.rs"
test = false
doc = false

[[bin]]
name = "continuous"
path = "fuzz_targets/continuous/dp.rs"
test = false
doc = false

[[bin]]
name = "category-dp"
path = "fuzz_targets/category/dp.rs"
test = false
doc = false
